--- a/frontend/expense-tracker/package.json
+++ b/frontend/expense-tracker/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
+    "emoji-picker-react": "^4.12.2",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
